fix(highlight): fix highlight span misalign

--- a/src/less/scheme.less
+++ b/src/less/scheme.less
@@ -128,9 +128,6 @@
 .dashed {
     border-top: 1px dashed @mid-gray;
 }
-span {
-    vertical-align: middle;
-}
 .warn {
     color: darken(@color-secondary, 20%);
 }
